[package]
name = "alien_space_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
image = "0.24.9"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
